switch to jul 3.0

--- a/versions.properties
+++ b/versions.properties
@@ -6,3 +6,29 @@
 ####
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
+
+version.org.openbase..jul.communication.controller=3.0-SNAPSHOT
+
+version.org.openbase..jul.exception==3.0-SNAPSHOT
+
+version.org.openbase..jul.extension.protobuf==3.0-SNAPSHOT
+
+version.org.openbase..jul.extension.type.processing==3.0-SNAPSHOT
+
+version.org.openbase..jul.extension.type.storage==3.0-SNAPSHOT
+
+version.org.openbase..jul.extension.type.transform==3.0-SNAPSHOT
+
+version.org.openbase..jul.extension.type.util==3.0-SNAPSHOT
+
+version.org.openbase..jul.pattern.launch==3.0-SNAPSHOT
+
+version.org.openbase..jul.pattern.trigger==3.0-SNAPSHOT
+
+version.org.openbase..jul.processing==3.0-SNAPSHOT
+
+version.org.openbase..jul.storage==3.0-SNAPSHOT
+
+version.org.openbase..jul.visual.javafx=3.0-SNAPSHOT
+
+version.org.openbase..jul.visual.swing=3.0-SNAPSHOT
