--- a/versions.properties
+++ b/versions.properties
@@ -9,6 +9,8 @@
 
 version.org.openbase..jul.communication.controller=3.0-SNAPSHOT
 
+version.org.openbase..jul.communication.mqtt=3.0-SNAPSHOT
+
 version.org.openbase..jul.exception==3.0-SNAPSHOT
 
 version.org.openbase..jul.extension.protobuf==3.0-SNAPSHOT
