switch to rct 3.0-Snapshot

--- a/versions.properties
+++ b/versions.properties
@@ -34,3 +34,5 @@ version.org.openbase..jul.storage=3.0-SNAPSHOT
 version.org.openbase..jul.visual.javafx=3.0-SNAPSHOT
 
 version.org.openbase..jul.visual.swing=3.0-SNAPSHOT
+
+version.org.openbase..rct=3.0-SNAPSHOT
