disable local auth

--- a/module/api/graphql/src/main/resources/application.properties
+++ b/module/api/graphql/src/main/resources/application.properties
@@ -23,12 +23,12 @@ server.port=13781
 spring.main.banner-mode=off
 
 # SSL
-server.ssl.key-store=classpath:dev-keystore.p12
-server.ssl.key-store-password=WrCqBj8WV/eeXZIW
+#server.ssl.key-store=classpath:dev-keystore.p12
+#server.ssl.key-store-password=WrCqBj8WV/eeXZIW
 
 # JKS or PKCS12
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alaias=basecubeone
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alaias=basecubeone
 
 
 graphql:
