--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,22 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+version.com.graphql-java..graphql-java-extended-scalars=17.0
+##                                          # available=2018-10-05T23-44-12-5312ccd
+##                                          # available=2019-08-31T02-34-04-3decba9
+##                                          # available=2021-03-30T00-21-22-0d32e2f-SNAPSHOT
+##                                          # available=2021-03-30T00-26-04-4e02150
+##                                          # available=2021-03-30T02-07-32-573beab
+##                                          # available=2021-03-30T02-55-48-f03414a
+##                                          # available=2021-03-31T04-38-21-f03414a
+##                                          # available=2021-03-29T23-28-56-0d32e2f-SNAPSHOT
+##                                          # available=2021-04-09T04-01-28-f4f9cb9
+##                                          # available=2021-06-29T01-19-32-8e19827
+##                                          # available=2021-07-20T10-05-45-ac72af3
+##                                          # available=2021-08-03T09-10-50-aff4d46
+##                                          # available=2021-08-15T23-45-48-a9f6ec6
+##                                          # available=2021-10-11T21-35-35-49138ff
+
 version.org.openbase..jul.communication.controller=3.0-SNAPSHOT
 
 version.org.openbase..jul.communication.mqtt=3.0-SNAPSHOT
