cleanup useless arguments

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -34,16 +34,10 @@ RUN ./gradlew --version
 RUN ./prepare.sh
 RUN cd lib/jul && \
     prefix="/tmp/" ./install.sh \
-    -Dmaven.javadoc.skip=true \
-    -Dmaven.wagon.http.retryHandler.count=3 \
-    -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false \
-    -Dmaven.wagon.httpconnectionManager.ttlSeconds=120
+    -Dmaven.javadoc.skip=true
 
 # Build bco
-RUN ./gradlew :bco.app.util:installDist -x test -x javadoc --no-daemon --stacktrace \
-    -Dmaven.wagon.http.retryHandler.count=3 \
-    -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false \
-    -Dmaven.wagon.httpconnectionManager.ttlSeconds=120
+RUN ./gradlew :bco.app.util:installDist -x test -x javadoc --no-daemon --stacktrace
 
 # Switch to baseline image
 FROM ubuntu:latest
