--- a/versions.properties
+++ b/versions.properties
@@ -7,8 +7,7 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-version.com.graphql-java-kickstart..graphql-spring-boot-starter=12.0.0
-##                                                  # available=12.0.1-SNAPSHOT
+version.com.graphql-java-kickstart..graphql-spring-boot-starter=12.0.1-SNAPSHOT
 
 ## unused
 version.junit.jupiter=[5.6,5.7-alpha)
@@ -127,15 +126,13 @@ version.org.openhab.core.bundles..org.openhab.core.io.rest.core=3.1.0
 ##                                                  # available=3.1.1
 ##                                                  # available=3.2.0
 
-version.com.google.api.graphql..rejoiner=0.3.1
-##                           # available=0.4.0-SNAPSHOT
-
 plugin.org.springframework.boot=2.6.2
 ##                  # available=2.6.3
 
 plugin.io.spring.dependency-management=1.0.11.RELEASE
 
 version.kotlin=1.6.10
+## # available=1.6.20-M1
 ## # available=1.6.255-SNAPSHOT
 ## # available=1.7.255-SNAPSHOT
 
