add missing spring dependency for websockets to work

--- a/versions.properties
+++ b/versions.properties
@@ -120,6 +120,8 @@ version.org.springframework.boot..spring-boot-starter-webflux=2.6.3
 
 version.org.springframework.boot..spring-boot-starter-jetty=2.6.3
 
+version.org.springframework.boot..spring-boot-starter-websocket=2.6.3
+
 version.org.springframework..spring-webmvc=5.3.15
 
 version.org.openhab.core.bundles..org.openhab.core.io.rest.core=3.1.0
