--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
+version = 3.1-SNAPSHOT
 org.gradle.caching = true
-org.gradle.daemon=true
+org.gradle.parallel = true
+org.gradle.daemon = true
+org.gradle.jvmargs = -Xmx2000m
