switch rct back to snapshot

--- a/versions.properties
+++ b/versions.properties
@@ -208,4 +208,4 @@ version.org.openbase..jul.visual.swing=3.2-SNAPSHOT
 ##                         # available=3.0.1
 ##                         # available=3.0.2
 
-version.org.openbase..rct=3.2.0
+version.org.openbase..rct=3.2-SNAPSHOT
