port some more tests

--- a/versions.properties
+++ b/versions.properties
@@ -9,6 +9,8 @@
 
 version.com.graphql-java-kickstart..graphql-spring-boot-starter=12.0.1-SNAPSHOT
 
+version.io.quarkus..quarkus-junit4-mock=2.9.1.Final
+
 ## unused
 version.junit.jupiter=[5.8,5.9-alpha)
 
@@ -111,6 +113,10 @@ version.com.google.guava..guava=28.0-jre
 ##                  # available=31.0.1-android
 ##                  # available=31.0.1-jre
 
+version.org.openbase..jul.transformation=3.2-SNAPSHOT
+
+version.org.testcontainers..junit-jupiter=1.17.2
+
 version.org.testcontainers..testcontainers=1.17.1
 
 version.org.springframework.boot..spring-boot-starter-webflux=2.6.3
@@ -204,3 +210,5 @@ version.org.openbase..jul.visual.swing=3.2-SNAPSHOT
 ##                         # available=3.0.0
 ##                         # available=3.0.1
 ##                         # available=3.0.2
+
+version.rxjava2.rxjava=2.2.21
