--- a/docker/docker-compose-homecube.yml
+++ b/docker/docker-compose-homecube.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "3.9"
 
 volumes:
   database_data:
@@ -8,10 +8,16 @@ volumes:
 
 services:
   mosquitto:
-    build: ./mosquitto
-    image: "prodaso/mosquitto"
+    image: mosquitto
     ports:
-      - "8884:8884"
+      - "1883:1883"
+    volumes: $HOME/.mosquitto.conf:/mosquitto/config/mosquitto.conf
+    restart: always
+    logging:
+      driver: local
+    detach: true  
+
+
   postgres:
     build: ./postgres
     image: "prodaso/postgres"
