--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -22,29 +22,29 @@ jobs:
 
     steps:
       - name: "Checkout Branch"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: "Setup Java"
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: 17
+          cache: 'gradle'
 
       - name: Setup Gradle cache
-        uses: actions/cache@v2.1.2
+        uses: actions/cache@v3
         with:
           path: ~/.gradle
-          key: ${{ runner.os }}-gradle-${{ hashFiles('build.gradle') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('versions.properties') }}-${{ github.sha }}
 
       - name: "build backend"
-        run: ./gradlew build -x test
+        run: ./gradlew --build-cache build -x test
 
-      - name: Upload Gradle reports
-        uses: actions/upload-artifact@v2.2.4
+      - name: Upload build reports
+        uses: actions/upload-artifact@v3
         if: ${{ failure() }}
         with:
-          name: Build Backend Reports
+          name: Build Reports
           path: "**/build/reports"
 
   test:
@@ -58,29 +58,29 @@ jobs:
 
     steps:
       - name: "Checkout Branch"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: "Setup Java"
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: 17
+          cache: 'gradle'
 
       - name: Setup Gradle cache
-        uses: actions/cache@v2.1.2
+        uses: actions/cache@v3
         with:
           path: ~/.gradle
-          key: ${{ runner.os }}-gradle-${{ hashFiles('build.gradle') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('versions.properties') }}-${{ github.sha }}
 
       - name: "test backend"
-        run: ./gradlew check
+        run: ./gradlew --build-cache check
         env:
           RUN_LONG_INTEGRATION_TESTS: false
 
-      - name: Upload Gradle reports
-        uses: actions/upload-artifact@v2.2.4
+      - name: Upload test reports
+        uses: actions/upload-artifact@v3
         if: ${{ failure() }}
         with:
-          name: Test Backend Reports
+          name: Test Reports
           path: "**/build/reports"
