--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Upload build reports
         uses: actions/upload-artifact@v3
-        if: ${{ failure() }}
+        if: { { failure() || contains(github.event.pull_request.labels.*.name, 'force reports') } }
         with:
           name: Build Reports
           path: "**/build/reports"
@@ -81,11 +81,10 @@ jobs:
 
       - name: "test backend"
         run: ./gradlew --build-cache check
-        env:
-          RUN_LONG_INTEGRATION_TESTS: false
 
       - name: Upload test reports
         uses: actions/upload-artifact@v3
+        if: {{ failure() || contains(github.event.pull_request.labels.*.name, 'force reports') }}
         with:
           name: Test Reports
           path: "**/build/reports"
