--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Upload build reports
         uses: actions/upload-artifact@v3
-        if: { { failure() || contains(github.event.pull_request.labels.*.name, 'force reports') } }
+        if: ${{ failure() || contains(github.event.pull_request.labels.*.name, 'force reports') }}
         with:
           name: Build Reports
           path: "**/build/reports"
