fix build-and-test syntax again

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -84,7 +84,7 @@ jobs:
 
       - name: Upload test reports
         uses: actions/upload-artifact@v3
-        if: {{ failure() || contains(github.event.pull_request.labels.*.name, 'force reports') }}
+        if: ${{ failure() || contains(github.event.pull_request.labels.*.name, 'force reports') }}
         with:
           name: Test Reports
           path: "**/build/reports"
