use mqtt test classes from jul and remove redundant code. upgradle junit engine.

--- a/versions.properties
+++ b/versions.properties
@@ -12,7 +12,7 @@ version.com.graphql-java-kickstart..graphql-spring-boot-starter=12.0.1-SNAPSHOT
 version.io.quarkus..quarkus-junit4-mock=2.9.1.Final
 
 ## unused
-version.junit.jupiter=[5.8,5.9-alpha)
+version.junit.jupiter=5.9.2
 
 version.org.jmdns..jmdns=3.5.7
 
