--- a/versions.properties
+++ b/versions.properties
@@ -6,16 +6,11 @@
 ####
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
-
-version.com.graphql-java-kickstart..graphql-spring-boot-starter=12.0.1-SNAPSHOT
-
+version.com.graphql-java-kickstart..graphql-spring-boot-starter=14.0.0
 version.io.quarkus..quarkus-junit4-mock=2.9.1.Final
-
 ## unused
 version.junit.jupiter=5.9.2
-
 version.org.jmdns..jmdns=3.5.7
-
 version.org.glassfish.jersey.security..oauth2-client=2.31
 ##                                       # available=2.32
 ##                                       # available=2.33
@@ -28,7 +23,6 @@ version.org.glassfish.jersey.security..oauth2-client=2.31
 ##                                       # available=3.0.1
 ##                                       # available=3.0.2
 ##                                       # available=3.0.3
-
 version.org.glassfish.jersey.media..jersey-media-sse=2.31
 ##                                       # available=2.32
 ##                                       # available=2.33
@@ -41,7 +35,6 @@ version.org.glassfish.jersey.media..jersey-media-sse=2.31
 ##                                       # available=3.0.1
 ##                                       # available=3.0.2
 ##                                       # available=3.0.3
-
 version.org.glassfish.jersey.inject..jersey-hk2=2.31
 ##                                  # available=2.32
 ##                                  # available=2.33
@@ -54,7 +47,6 @@ version.org.glassfish.jersey.inject..jersey-hk2=2.31
 ##                                  # available=3.0.1
 ##                                  # available=3.0.2
 ##                                  # available=3.0.3
-
 version.org.glassfish.jersey.core..jersey-client=2.31
 ##                                   # available=2.32
 ##                                   # available=2.33
@@ -67,34 +59,25 @@ version.org.glassfish.jersey.core..jersey-client=2.31
 ##                                   # available=3.0.1
 ##                                   # available=3.0.2
 ##                                   # available=3.0.3
-
 version.org.apache.commons..commons-math3=3.6.1
-
 version.net.javacrumbs.future-converter..future-converter-java8-guava=1.2.0
-
 version.io.socket..socket.io-client=1.0.0
 ##                      # available=1.0.1
 ##                      # available=2.0.0
 ##                      # available=2.0.1
-
 version.io.reactivex.rxjava2..rxjava=2.2.21
-
 version.commons-collections..commons-collections=3.2.2
 ##                                   # available=20030418.083655
 ##                                   # available=20031027.000000
 ##                                   # available=20040102.233541
 ##                                   # available=20040616
-
 ## unused
 version.com.influxdb..influxdb-client-java=[5.0,5.1-alpha)
-
 version.com.google.inject.extensions..guice-multibindings=4.2.3
-
 version.com.google.inject..guice=5.0.1
 ##                   # available=5.0.2-SNAPSHOT
 ##                   # available=5.1.0
 ##                   # available=5.1.1-SNAPSHOT
-
 version.com.google.guava..guava=28.0-jre
 ##                  # available=28.1-android
 ##                  # available=28.1-jre
@@ -112,100 +95,74 @@ version.com.google.guava..guava=28.0-jre
 ##                  # available=31.0-jre
 ##                  # available=31.0.1-android
 ##                  # available=31.0.1-jre
-
 version.org.openbase..jul.transformation=3.3-SNAPSHOT
-
 version.org.testcontainers..junit-jupiter=1.17.2
-
 version.org.testcontainers..testcontainers=1.17.1
-
 version.org.springframework.boot..spring-boot-starter-webflux=2.6.3
-
 version.org.springframework.boot..spring-boot-starter-jetty=2.6.3
-
 version.org.springframework.boot..spring-boot-starter-websocket=2.6.3
-
 version.org.springframework..spring-webmvc=5.3.15
-
 version.org.openhab.core.bundles..org.openhab.core.io.rest.core=3.1.0
 ##                                                  # available=3.1.1
 ##                                                  # available=3.2.0
-
 plugin.org.springframework.boot=2.6.2
 ##                  # available=2.6.3
-
 plugin.io.spring.dependency-management=1.0.11.RELEASE
-
 version.kotlin=1.7.0
-
 version.org.openbase..jul.communication.controller=3.3-SNAPSHOT
 ##                                     # available=3.0.0
 ##                                     # available=3.0.1
 ##                                     # available=3.0.2
-
 version.org.openbase..jul.communication.mqtt=3.3-SNAPSHOT
 ##                               # available=3.0.0
 ##                               # available=3.0.1
 ##                               # available=3.0.2
-
 version.org.openbase..jul.exception=3.3-SNAPSHOT
 ##                      # available=3.0.0
 ##                      # available=3.0.1
 ##                      # available=3.0.2
-
 version.org.openbase..jul.extension.protobuf=3.3-SNAPSHOT
 ##                               # available=3.0.0
 ##                               # available=3.0.1
 ##                               # available=3.0.2
-
 version.org.openbase..jul.extension.type.processing=3.3-SNAPSHOT
 ##                                      # available=3.0.0
 ##                                      # available=3.0.1
 ##                                      # available=3.0.2
-
 version.org.openbase..jul.extension.type.storage=3.3-SNAPSHOT
 ##                                   # available=3.0.0
 ##                                   # available=3.0.1
 ##                                   # available=3.0.2
-
 version.org.openbase..jul.extension.type.transform=3.3-SNAPSHOT
 ##                                     # available=3.0.0
 ##                                     # available=3.0.1
 ##                                     # available=3.0.2
-
 version.org.openbase..jul.extension.type.util=3.3-SNAPSHOT
 ##                                # available=3.0.0
 ##                                # available=3.0.1
 ##                                # available=3.0.2
-
 version.org.openbase..jul.pattern.launch=3.3-SNAPSHOT
 ##                           # available=3.0.0
 ##                           # available=3.0.1
 ##                           # available=3.0.2
-
 version.org.openbase..jul.pattern.trigger=3.3-SNAPSHOT
 ##                            # available=3.0.0
 ##                            # available=3.0.1
 ##                            # available=3.0.2
-
 version.org.openbase..jul.processing=3.3-SNAPSHOT
 ##                       # available=3.0.0
 ##                       # available=3.0.1
 ##                       # available=3.0.2
-
 version.org.openbase..jul.storage=3.3-SNAPSHOT
 ##                    # available=3.0.0
 ##                    # available=3.0.1
 ##                    # available=3.0.2
-
 version.org.openbase..jul.visual.javafx=3.3-SNAPSHOT
 ##                          # available=3.0.0
 ##                          # available=3.0.1
 ##                          # available=3.0.2
-
 version.org.openbase..jul.visual.swing=3.3-SNAPSHOT
 ##                         # available=3.0.0
 ##                         # available=3.0.1
 ##                         # available=3.0.2
-
 version.rxjava2.rxjava=2.2.21
