--- a/.github/workflows/publish-jars.yml
+++ b/.github/workflows/publish-jars.yml
@@ -13,12 +13,14 @@ jobs:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Java
-        uses: actions/setup-java@v2
+      - name: "Checkout Branch"
+        uses: actions/checkout@v3
+      - name: "Setup Java"
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          distribution: 'temurin'
+          java-version: 17
+          cache: 'gradle'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
       - name: Publish Packages
