--- a/.github/workflows/auto-branch-update.yaml
+++ b/.github/workflows/auto-branch-update.yaml
@@ -14,4 +14,4 @@ jobs:
       - uses: docker://chinthakagodawita/autoupdate-action:v1
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-          MERGE_CONFLICT_ACTION: "fail"
+          MERGE_CONFLICT_ACTION: "ignore"
