configure beta pr review deployment

--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -11,6 +11,7 @@ on:
   pull_request:
     branches:
       - dev
+      - beta
     types: [opened, labeled, synchronize, reopened, ready_for_review]
 
 jobs:
