--- a/docker/device-manager/openhab/Dockerfile
+++ b/docker/device-manager/openhab/Dockerfile
@@ -6,7 +6,6 @@ FROM openbaseorg/bco:${BCO_BASE_IMAGE_VERSION}
 ENV \
     JAVA_OPTS="" \
     OPENHAB_CONF="/etc/openhab2" \
-    BCO_OPTIONS="" \
     BCO_MODULE_PREPARE_SCRIPT="bco-module-prepare.sh"
 
 # Basic build-time metadata as defined at http://label-schema.org
@@ -33,7 +32,7 @@ RUN ln -s /usr/local/bin/${BCO_MODULE_PREPARE_SCRIPT} && \
 
 # Configure healthcheck
 # todo: make sure only device offered by this device manager are checked
-HEALTHCHECK --interval=15m --timeout=2m CMD bco-validate >/dev/null || exit 1
+HEALTHCHECK --interval=15m --timeout=2m CMD bco-validate  --host ${MQTT_BROKER} >/dev/null || exit 1
 
 # switch to root, let the entrypoint drop back to bco user
 USER root
