--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,11 +12,37 @@ on:
     types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
+  check:
+    name: "Check"
+
+    if: github.event.pull_request.draft == false
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: "Checkout Branch"
+        uses: actions/checkout@v3
+
+      - name: "Check for changes worth testing"
+        id: check
+        run: |
+          changed_files=$(gh pr diff --name-only ${{ github.event.pull_request.number }})
+
+          if [[ -n $(echo $changed_files | grep 'buildSrc/') || -n $(echo $changed_files | grep 'docker/') || -n $(echo $changed_files | grep 'gradle/') || -n $(echo $changed_files | grep 'lib/') || -n $(echo $changed_files | grep 'module/') ]]; then
+            echo "worth_testing=true" >> $GITHUB_OUTPUT
+          else
+            echo "worth_testing=false" >> $GITHUB_OUTPUT
+          fi
+
+
+
   build:
     name: "Build"
     timeout-minutes: 10
 
-    if: github.event.pull_request.draft == false
+    if: |
+      (github.event.pull_request.draft == false)
+      && ${{ steps.check.outputs.worth_testing }} == true)
 
     runs-on: ubuntu-latest
 
@@ -54,7 +80,10 @@ jobs:
     name: "Test"
     timeout-minutes: 120
 
-    if: github.event.pull_request.draft == false
+    if: |
+      (github.event.pull_request.draft == false)
+      && (${{ steps.check.outputs.worth_testing }} == true)
+
     needs: build
 
     runs-on: ubuntu-latest
