--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,6 +18,8 @@ jobs:
     if: github.event.pull_request.draft == false
 
     runs-on: ubuntu-latest
+    outputs:
+      worth_testing: ${{ steps.check.outputs.worth_testing }}
 
     steps:
       - name: "Checkout Branch"
@@ -42,7 +44,7 @@ jobs:
 
     if: |
       (github.event.pull_request.draft == false)
-      && ${{ steps.check.outputs.worth_testing }} == true)
+      && ${{ needs.check.outputs.worth_testing }} == true
 
     runs-on: ubuntu-latest
 
@@ -82,7 +84,7 @@ jobs:
 
     if: |
       (github.event.pull_request.draft == false)
-      && (${{ steps.check.outputs.worth_testing }} == true)
+      && ${{ needs.check.outputs.worth_testing }} == true
 
     needs: build
 
