--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -36,7 +36,7 @@ jobs:
             echo "worth_testing=false" >> $GITHUB_OUTPUT
           fi
 
-
+# ... other steps
 
   build:
     name: "Build"
