--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -11,6 +11,9 @@ on:
       - "epic/**"
     types: [opened, synchronize, reopened, ready_for_review]
 
+
+# Why is this here?
+
 jobs:
   check:
     name: "Check"
