no tests for .github or docs

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -48,6 +48,8 @@ jobs:
             echo "worth_testing=false" >> "$GITHUB_OUTPUT"
           fi
 
+          echo "worth_testing=${{steps.check.outputs.worth_testing}}"
+
   build:
     name: "Build"
     timeout-minutes: 10
