no tests for .github or docs

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -50,15 +50,27 @@ jobs:
 
           echo "worth_testing=${{steps.check.outputs.worth_testing}}"
 
+
+  testing:
+    name: "Testing"
+
+    needs: check
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Checkout Branch"
+        uses: actions/checkout@v3
+
+      - name: "Check for changes worth testing"
+        run: |
+          echo "worth_testing=${{needs.check.outputs.worth_testing}}"
+
   build:
     name: "Build"
     timeout-minutes: 10
-
+    needs: testing
     if: |
       (github.event.pull_request.draft == false)
       && ${{ needs.check.outputs.worth_testing }} == true
-
-    needs: check
     
     runs-on: ubuntu-latest
 
