--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -66,7 +66,7 @@ jobs:
     name: "Build"
     timeout-minutes: 10
     needs: testing
-    if: ((github.event.pull_request.draft == false) && (${{ needs.check.outputs.worth_testing }} == true))
+    if: (${{ needs.check.outputs.worth_testing }} == true)
     
     runs-on: ubuntu-latest
 
