changes to push

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -68,8 +68,8 @@ jobs:
     needs: testing
     if: |
       (github.event.pull_request.draft == false)
-      && (${{ needs.check.outputs.worth_testing }} == '25')
-      #(needs.check_labels.outputs.docs == 'success')
+      && (needs.check.outputs.worth_testing == true)
+
     
     runs-on: ubuntu-latest
 
@@ -109,7 +109,7 @@ jobs:
 
     if: |
       (github.event.pull_request.draft == false)
-      && ${{ needs.check.outputs.worth_testing }} == true
+      && (needs.check.outputs.worth_testing == true)
 
     needs: build
 
